# huion-solar-getter

./: Cargo.toml  README.md  definitions.json
.github/workflows/: rust.yml
src/: datalogger.rs  main.rs  parser.rs
src/parser/: types.rs
