[package]
name = "solar_getter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.9.0", default-features = false, features = ["tcp-sync"] }
redis = "0.23"