[package]
name = "solar_getter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio-modbus = { version = "0.9.0", default-features = false, features = ["tcp-sync"] }
redis = "0.23"